chromeos: Fix "show taps" circle painting after display rotation

The tap visualizer mojo app creates a fullscreen widget in the overlay
container. It draws "tap point" circles in that widget. When the
display work area changes (for example, after display rotation) the
widget needs to be resized. Add a layout manager that handles the
resize.

In theory we should do this for maximized and pinned windows as well.
However, I'm limiting it to fullscreen windows because I intend to
backport the fix to M69. (The bug is a user-visible regression that
affects recording demo videos on detachable and tablet devices.)

Bug: 869130
Test: ash_unittests, enable "Show taps" in about:flags, rotate display, tap near the bottom of the display
Change-Id: If54c65e2964f2a709c707e255c1b80d8e16666d9
Reviewed-on: https://chromium-review.googlesource.com/1165956
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581364}
Former-commit-id: 5ba8d7304b7afe20c0d76609c1f5e4c010435911